# dnd-board-game

./: .env.bak  .env.example  .env.production.example  .eslintrc.js  .gitignore  .prettierrc  .railway-deploy  CLAUDE.md  CLAUDE_OLD.md  Dockerfile  PROJECT_PROGRESS_REPORT.md  Procfile  claude_conv_20260104.txt  docker-compose.prod.yml  docker-compose.yml  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  railway.toml  tsconfig.base.json  turbo.json
.claude/: settings.local.json
docs/: 00_Master_Implementation_Guide.md  01_API_Specifications.md  02_API_Specifications_Part2.md  03_Component_Integration.md  (+54 more)
services/: Cargo.toml
services/ai-service/: Cargo.toml  package.json
services/ai-service-ts/: package.json
services/ai-service-ts/src/lib/: claude.ts  config.ts  logger.ts
services/ai-service-ts/src/routes/: conversation.ts
services/ai-service/prisma/: schema.prisma
services/ai-service/src/: index.ts  main.rs
services/ai-service/src/handlers/: conversation.ts  generation.ts
services/ai-service/src/lib/: config.ts  contentSafety.ts  db.ts  elevenlabs.ts  runway.ts  storageService.ts
services/ai-service/src/middleware/: auth.ts  rateLimiter.ts
services/ai-service/src/prompts/: campaignStudio.ts
services/ai-service/src/routes/: campaign-studio.ts  conversation.ts  generation.ts  video.ts  voice.ts
services/api-gateway/: Dockerfile  nixpacks.toml  package.json  railway.toml  vitest.config.ts
services/api-gateway/src/: config.ts  index.ts
services/api-gateway/src/__tests__/: setup.ts
services/api-gateway/src/__tests__/services/: authService.test.ts  campaignService.test.ts  characterService.test.ts  dmService.test.ts
services/api-gateway/src/data/: personalityTemplates.ts
services/api-gateway/src/lib/: logger.ts
services/api-gateway/src/middleware/: auth.ts  basicAuth.ts  validation.ts
services/api-gateway/src/routes/: admin.ts  auth.ts  campaignStudio.ts  campaigns.ts  characters.ts  dm.ts  game.ts  media.ts  profile.ts
services/api-gateway/src/schemas/: auth.ts
services/api-gateway/src/services/: authService.ts  campaignService.ts  characterService.ts  imageGenerationService.ts  personalityGenerator.ts  storageService.ts
services/game-state/: package.json
services/game-state/src/: index.ts
services/grid-solver/: Cargo.toml
services/grid-solver/src/: main.rs
services/media-service/: package.json
services/media-service/src/: index.ts
services/media-service/src/prompts/: characterPrompts.ts
services/media-service/src/services/: nanoBananaService.ts
services/media-service/src/utils/: contentSafety.ts
services/rules-engine/: Cargo.toml
services/rules-engine/src/: main.rs
services/shared-rust/: Cargo.toml
services/shared-rust/src/: errors.rs  lib.rs  types.rs
services/ws-gateway/: Dockerfile  nixpacks.toml  package.json  railway.toml  tsconfig.json
services/ws-gateway/src/: ConnectionManager.ts  SessionManager.ts  WebSocketServer.ts  config.ts  index.ts
services/ws-gateway/src/__tests__/: ConnectionManager.test.ts
services/ws-gateway/src/auth/: validateToken.ts
services/ws-gateway/src/handlers/: MessageHandler.ts  chatHandlers.ts  gameHandlers.ts
services/ws-gateway/src/lib/: logger.ts
(+248 files in other folders)
