# /services/Cargo.toml (Rust workspace root)

[workspace]
resolver = "2"
members = [
    "rules-engine",
    "grid-solver",
    "ai-service",
    "shared-rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DnD Platform Team"]
license = "UNLICENSED"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC
tonic = "0.10"
prost = "0.12"
tonic-build = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1.4"
criterion = "0.5"
