[package]
name = "ai-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI Service - Integration with AI models for content generation"

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-build.workspace = true

[[bin]]
name = "ai-service"
path = "src/main.rs"
