[package]
name = "grid-solver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Grid Solver - Line of Sight, AoE, and pathfinding calculations"

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-build.workspace = true

[[bin]]
name = "grid-solver"
path = "src/main.rs"
